--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "cloud-tools",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.2",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "devui-theme": "^0.0.2",
+    "@devui-design/icons": "^1.3.0",
+    "devui-theme": "^0.0.4",
     "sass": "^1.52.3",
-    "vue": "^3.2.25",
-    "vue-devui": "1.0.0-rc.11"
+    "vue": "^3.2.37",
+    "vue-devui": "^1.0.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.9",
-    "vue-tsc": "^0.34.7"
+    "@vitejs/plugin-vue": "^3.1.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.1.0",
+    "vue-tsc": "^0.40.4"
   }
 }
