--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,5 @@
+# Editor configuration, see https://editorconfig.org
+
 ## 打开文件时，EditorConfig 插件会在打开的文件的目录和每个父目录中查找名为 .editorconfig 的文件。
 ## 如果到达根文件路径或找到具有 root=true 的 EditorConfig 文件，将停止对 .editorconfig 文件的搜索。
 ## 如果 root=true 没有配置, EditorConfig 插件将会在工程之外寻找 .editorconfig 文件
@@ -29,11 +31,11 @@ tab_width = 2
 ## 设置为lf、cr或crlf以控制如何表示换行符。
 end_of_line = lf
 
-## 设置为true以删除换行符之前的任何空格字符，设置为false以确保不会。
-trim_trailing_whitespace = true
-
 ## 设置为true以确保文件在保存时以换行符结束，设置为false以确保不以换行符结束。
 insert_final_newline = true
+
+## 设置为true以删除换行符之前的任何空格字符，设置为false以确保不会。
+trim_trailing_whitespace = true
 
 [*.ts]
 quote_type = single
