--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "cloud-tools",
   "private": true,
-  "version": "1.0.2",
+  "version": "1.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@devui-design/icons": "^1.3.0",
-    "devui-theme": "^0.0.4",
-    "sass": "^1.52.3",
-    "vue": "^3.2.37",
-    "vue-devui": "^1.0.2"
+    "@devui-design/icons": "^1.4.0",
+    "devui-theme": "^0.0.7",
+    "sass": "^1.80.3",
+    "vue": "^3.5.12",
+    "vue-devui": "^1.6.21"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.1.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.2.7",
-    "vue-tsc": "^0.40.4"
+    "@vitejs/plugin-vue": "^5.1.4",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.9",
+    "vue-tsc": "^2.1.6"
   }
 }
